--- a/package.json
+++ b/package.json
@@ -2,10 +2,18 @@
   "name": "comp392-lab3",
   "version": "1.0.0",
   "description": "Comp392-lab3 Centennial College",
-  "main": "game.js",
-  "dependencies": {},
+  "main": "",
+  "dependencies": {
+    "typescript": "^1.7.5"
+  },
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-connect": "^2.3.1",
+    "gulp-debug": "^2.1.2",
+    "gulp-inject": "^3.0.0",
+    "gulp-open": "^1.0.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-typescript": "^2.10.0",
     "gulp-util": "^3.0.7"
   },
   "scripts": {
